--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
 		<meta charset = "UTF-8"/>
 		<link type="text/css" rel="stylesheet" href="Practice.css" />
 		<title>My Practice & Davianic Area</title>
+		
 		<!--AQUI VA UN JAVASCRIPT-->
 		<script type = "text/javascript">
 			//USO DE PROMPTS
 			var nombre = prompt ("¿Cual es tú nombre?");
 			document.write("¡Bienvenido " + nombre + "!");
-			//PARA HACER UN ARREGLO
+			/*PARA HACER UN ARREGLO
 			var lista = new Array ("plátanos ", "patatas ", "helado ", "filetes ");
-			
-			document.write(lista);
+			document.write(lista);*/
+			//ESTRUCTURAS Y CONDICIONALES
+			if (nombre.length >= 7) {
+				alert("¡Tú nombre es largo amigo!");
+			}
 		</script>
 	</head>
 	<body>
