--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 				document.write("Muy bien " + nombre + ", tienes un nombre corto<br>");
 			}
 			// ESTO VA A IMPRIMIR "derf"
-      		document.write("wonderful day".substring(3,7));
+      		document.write("wonderful day".substring(3,7) + "</br>");
+			  
+			 /*FOR LOOPS*/
+			 for (i = 0; i < 11; i++) {
+				 console.log ("Hola " + i);
+			 }
 		</script>
 	</head>
 	<body>
