--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<!-- METATAG PARA CARACTERES ESPECIALES -->
 		<meta charset = "UTF-8"/>
-		<link type="text/css" rel="stylesheet" href="Practice.css" />
-		<title>My Practice & Davianic Area</title>
+		<link type = "text/css" rel = "stylesheet" href = "Practice.css" />
+		<title>My Practice Area</title>
 		
 		<!--AQUI VA UN JAVASCRIPT-->
 		<script type = "text/javascript">
