--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- METATAG PARA CARACTERES ESPECIALES -->
 		<meta charset = "UTF-8"/>
 		<link type = "text/css" rel = "stylesheet" href = "Practice.css" />
-		<title>My Practice Area</title>
+		<title>My Practicing Area</title>
 		
 		<!--AQUI VA UN JAVASCRIPT-->
 		<script type = "text/javascript">
