--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link type = "text/css" rel = "stylesheet" href = "Practice.css" />
 		<title>My Practice Area</title>
 		
-		<!--AQUI VA UN JAVASCRIPT-->
+		<!--AQUI VA UN JAVASCRIPTTT-->
 		<script type = "text/javascript">
 			// USO DE PROMPTS
 			var nombre = prompt ("¿Cual es tú nombre?");
