--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<!-- METATAG PARA CARACTERES ESPECIALES -->
 		<meta charset = "UTF-8"/>
 		<link type = "text/css" rel = "stylesheet" href = "Practice.css" />
-		<title>My Practicing Area</title>
+		<title>My Practice Area</title>
 		
-		<!--AQUI VA UN JAVASCRIPTTT-->
+		<!--AQUI VA UN JAVASCRIPT-->
 		<script type = "text/javascript">
 			// USO DE PROMPTS
 			var nombre = prompt ("¿Cual es tú nombre?");
