--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset = "UTF-8"/>
 		<link type = "text/css" rel = "stylesheet" href = "Practice.css" />
 		<title>My Practice Area</title>
-		
+<!--MASTER-->		
 		<!--AQUI VA UN JAVASCRIPT-->
 		<script type = "text/javascript">
 			// USO DE PROMPTS
