--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 			 for (i = 0; i < 11; i++) {
 				 console.log ("Hola " + i);
 			 }
+
+			//WHILE LOOPS
+			var a = 0;
+			while (a < 10){
+			   document.write ("Hola" + </br>);
+			   a = a++;
+			}
 		</script>
 	</head>
 	<body>
