--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			  
 			 /*FOR LOOPS*/
 			 for (i = 0; i < 11; i++) {
+				if (i == 5) {
+					break;	
+				}
 				 console.log ("Hola " + i);
 			 }
 
