--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			 for (i = 0; i < 11; i++) {
 				if (i == 5) {
 					break;	
+					continue; /*ESTO ES PARA SALTARSE EL 5*/
 				}
 				 console.log ("Hola " + i);
 			 }
