--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 			// USO DE PROMPTS
 			var nombre = prompt ("¿Cual es tú nombre?");
 			document.write("¡Bienvenido " + nombre + "!<br>");
-			/*PARA HACER UN ARREGLO
-			var lista = new Array ("plátanos ", "patatas ", "helado ", "filetes ");
-			document.write(lista);*/
+			/*PARA HACER UN ARREGLO*/
+			var sefirot = new Array ("Keter ", "Jojmá ", "Biná ", "Jesed ", "Guevurah ", "Tiferet ", "Netzaj ", "Hod ", "Yesod ", "Maljut ");
+			document.write(sefirot);
 			// ESTRUCTURAS Y CONDICIONALES
 			if (nombre.length >= 7) {
 				alert("¡Tú nombre es largo amigo!");
