--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
       		document.write("wonderful day".substring(3,7) + "</br>");
 			  
 			 /*FOR LOOPS*/
-			 for (i = 0; i < 11; i++) {
-				if (i == 5) {
-					break;	
-					continue; /*ESTO ES PARA SALTARSE EL 5*/
-				}
+			 	for (i = 0; i < 11; i++) {
+					if (i == 5) {
+						break;	
+						/*continue; ESTO ES PARA SALTARSE EL 5*/
+					}
 				 console.log ("Hola " + i);
 			 }
 
 			//WHILE LOOPS
 			var a = 0;
-			while (a < 10){
-			   document.write ("Hola" + </br>);
-			   a = a++;
+			while (a < 10) {
+			   document.write ("Hola" + "</br>");
+			   a = a + 1;
 			}
 		</script>
 	</head>
