--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
 			//WHILE LOOPS
 			var a = 0;
 			while (a < 10) {
-			   console.log ("Hola" + "</br>");
+			   console.log ("HolaWhile" + a + "</br>");
 			   a = a + 1;
 			}
 			
 			//FUNCIONES
-			function test (x,z) {
+			function test(x,y) {
 				z = x + y;
 				return z;
 			}
-			alert(test(4,5));
+			alert("La suma de tu función es " + test(4,5));
 		</script>
 		<div id="footer"></div>
 			
